<resources>
    <string name="app_name">Ex2_18521507</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="file">File</string>
    <string name="view">View</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="tool">Tool</string>
    <string name="ot_new">New</string>
    <string name="Contact_info">View Contact Information</string>
    <string name="Contact_finish">Finish</string>
    <string name="call_page">Call Phone</string>
    <string name="internet_page">Internet</string>
    <string name="web_page">Google</string>

</resources>